# raspberrypi-pico-c

./: .gitignore  README.md
binary-die/: CMakeLists.txt  README.md  diagram.json  hardware.cpp  hardware.h  main.cpp  wokwi-project.txt  wokwi.toml
blink/: CMakeLists.txt  blink.c
boardtest/: CMakeLists.txt  README.md  config.h  diagram.json  hardware.cpp  hardware.h  main.cpp  wokwi-project.txt  wokwi.toml
